Response and recycler view for ViewSchedule

--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -206,330 +206,11 @@
                         android:textSize="16dp"/>
                 </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/lltodayDiscription"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerview"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:orientation="vertical">
+                        android:layout_height="wrap_content"/>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
-                            android:orientation="horizontal">
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_weight="1"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Dammar Yadav"
-                                    android:layout_gravity="center_vertical"
-                                    android:fontFamily="@font/sofia_pro_semi_bold_az"
-                                    android:textSize="20dp"
-                                    android:textStyle="bold"
-                                    android:letterSpacing="0.1"
-                                    android:textColor="#ffffff"/>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Bajrang traders"
-                                    android:layout_gravity="center_vertical"
-                                    android:fontFamily="@font/sofia_pro_regular_az"
-                                    android:textSize="16dp"
-                                    android:letterSpacing="0.1"
-                                    android:textColor="#CCFFFFFF"/>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Phool Chowlk, Bhokraha - 3"
-                                    android:layout_gravity="center_vertical"
-                                    android:fontFamily="@font/sofia_pro_regular_az"
-                                    android:textSize="14dp"
-                                    android:letterSpacing="0.1"
-                                    android:textColor="#ccffffff"/>
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="180dp"
-                                android:layout_weight="1"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Send · Full · P : 15"
-                                    android:gravity="right"
-                                    android:fontFamily="@font/sofia_pro_light_az"
-                                    android:textSize="16dp"
-                                    android:textColor="#ffffff"/>
-
-                                <FrameLayout
-                                    android:visibility="visible"
-                                    android:layout_marginTop="10dp"
-                                    android:layout_width="100dp"
-                                    android:layout_height="35dp"
-                                    android:layout_gravity="right"
-                                    android:animateLayoutChanges="true">
-
-                                    <ImageView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:background="@drawable/ic_toggle_active"
-                                        android:backgroundTint="#21EB43"
-                                        android:layout_gravity="left|center_vertical"/>
-
-                                    <ImageView
-                                        android:layout_width="15dp"
-                                        android:layout_height="15dp"
-                                        android:layout_marginLeft="10dp"
-                                        android:background="@drawable/ic_tick"
-                                        android:layout_gravity="left|center_vertical"/>
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="Kancha"
-                                        android:paddingRight="10dp"
-                                        android:textColor="@color/white"
-                                        android:fontFamily="@font/sofia_pro_regular_az"
-                                        android:textSize="16dp"
-                                        android:textStyle="bold"
-                                        android:layout_gravity="right|center_vertical"/>
-                                </FrameLayout>
-
-                            </LinearLayout>
-                        </LinearLayout>
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_gravity="center_vertical"
-                            android:background="#707070"/>
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:orientation="vertical">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
-                            android:orientation="horizontal">
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_weight="1"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Dammar Yadav"
-                                    android:layout_gravity="center_vertical"
-                                    android:fontFamily="@font/sofia_pro_semi_bold_az"
-                                    android:textSize="20dp"
-                                    android:textStyle="bold"
-                                    android:letterSpacing="0.1"
-                                    android:textColor="#ffffff"/>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Bajrang traders"
-                                    android:layout_gravity="center_vertical"
-                                    android:fontFamily="@font/sofia_pro_regular_az"
-                                    android:textSize="16dp"
-                                    android:letterSpacing="0.1"
-                                    android:textColor="#CCFFFFFF"/>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Phool Chowlk, Bhokraha - 3"
-                                    android:layout_gravity="center_vertical"
-                                    android:fontFamily="@font/sofia_pro_regular_az"
-                                    android:textSize="14dp"
-                                    android:letterSpacing="0.1"
-                                    android:textColor="#ccffffff"/>
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="180dp"
-                                android:layout_weight="1"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Send · Full · K : 20"
-                                    android:gravity="right"
-                                    android:fontFamily="@font/sofia_pro_light_az"
-                                    android:textSize="16dp"
-                                    android:textColor="#ffffff"/>
-
-                                <FrameLayout
-                                    android:visibility="visible"
-                                    android:layout_marginTop="10dp"
-                                    android:layout_width="100dp"
-                                    android:layout_height="35dp"
-                                    android:layout_gravity="right"
-                                    android:animateLayoutChanges="true">
-
-                                    <ImageView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:background="@drawable/ic_toggle_active"
-                                        android:layout_gravity="left|center_vertical"/>
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="Accept"
-                                        android:paddingLeft="10dp"
-                                        android:paddingRight="10dp"
-                                        android:textColor="@color/white"
-                                        android:fontFamily="@font/sofia_pro_regular_az"
-                                        android:textSize="16dp"
-                                        android:textStyle="bold"
-                                        android:layout_gravity="center"/>
-                                </FrameLayout>
-
-                            </LinearLayout>
-                        </LinearLayout>
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_gravity="center_vertical"
-                            android:background="#707070"/>
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:orientation="vertical">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
-                            android:orientation="horizontal">
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_weight="1"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Dammar Yadav"
-                                    android:layout_gravity="center_vertical"
-                                    android:fontFamily="@font/sofia_pro_semi_bold_az"
-                                    android:textSize="20dp"
-                                    android:textStyle="bold"
-                                    android:letterSpacing="0.1"
-                                    android:textColor="#ffffff"/>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Bajrang traders"
-                                    android:layout_gravity="center_vertical"
-                                    android:fontFamily="@font/sofia_pro_regular_az"
-                                    android:textSize="16dp"
-                                    android:letterSpacing="0.1"
-                                    android:textColor="#CCFFFFFF"/>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Phool Chowlk, Bhokraha - 3"
-                                    android:layout_gravity="center_vertical"
-                                    android:fontFamily="@font/sofia_pro_regular_az"
-                                    android:textSize="14dp"
-                                    android:letterSpacing="0.1"
-                                    android:textColor="#ccffffff"/>
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="180dp"
-                                android:layout_weight="1"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Send · Full · K : 20"
-                                    android:gravity="right"
-                                    android:fontFamily="@font/sofia_pro_light_az"
-                                    android:textSize="16dp"
-                                    android:textColor="#ffffff"/>
-
-                                <FrameLayout
-                                    android:visibility="visible"
-                                    android:layout_marginTop="10dp"
-                                    android:layout_width="100dp"
-                                    android:layout_height="35dp"
-                                    android:layout_gravity="right"
-                                    android:animateLayoutChanges="true">
-
-                                    <ImageView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:background="@drawable/ic_toggle_active"
-                                        android:layout_gravity="left|center_vertical"/>
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="Accept"
-                                        android:paddingLeft="10dp"
-                                        android:paddingRight="10dp"
-                                        android:textColor="@color/white"
-                                        android:fontFamily="@font/sofia_pro_regular_az"
-                                        android:textSize="16dp"
-                                        android:textStyle="bold"
-                                        android:layout_gravity="center"/>
-                                </FrameLayout>
-
-                            </LinearLayout>
-                        </LinearLayout>
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_gravity="center_vertical"
-                            android:background="#707070"/>
-
-                    </LinearLayout>
-
-                </LinearLayout>
             </LinearLayout>
 
 
