--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -261,278 +261,10 @@
                         android:textSize="16dp"/>
                 </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/lllaterDiscription"
-                    android:visibility="gone"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/Extrarecyclerview"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:orientation="vertical">
-
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
-                            android:orientation="horizontal">
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_weight="1"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                                <LinearLayout
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="horizontal">
-
-                                    <TextView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:text="OCT 20"
-                                        android:layout_gravity="center_vertical"
-                                        android:fontFamily="@font/sofia_pro_semi_bold_az"
-                                        android:textSize="20dp"
-                                        android:textStyle="bold"
-                                        android:letterSpacing="0.1"
-                                        android:textColor="#ff9500"/>
-
-                                    <TextView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:text=" · "
-                                        android:layout_gravity="center_vertical"
-                                        android:fontFamily="@font/sofia_pro_semi_bold_az"
-                                        android:textSize="20dp"
-                                        android:textStyle="bold"
-                                        android:letterSpacing="0.1"
-                                        android:textColor="#ffffff"/>
-
-                                    <TextView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:text="Dammar Yadav"
-                                        android:layout_gravity="center_vertical"
-                                        android:fontFamily="@font/sofia_pro_semi_bold_az"
-                                        android:textSize="20dp"
-                                        android:textStyle="bold"
-                                        android:letterSpacing="0.1"
-                                        android:textColor="#ffffff"/>
-                                </LinearLayout>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Bajrang traders"
-                                    android:layout_gravity="center_vertical"
-                                    android:fontFamily="@font/sofia_pro_regular_az"
-                                    android:textSize="16dp"
-                                    android:letterSpacing="0.1"
-                                    android:textColor="#CCFFFFFF"/>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Phool Chowlk, Bhokraha - 3"
-                                    android:layout_gravity="center_vertical"
-                                    android:fontFamily="@font/sofia_pro_regular_az"
-                                    android:textSize="14dp"
-                                    android:letterSpacing="0.1"
-                                    android:textColor="#ccffffff"/>
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="180dp"
-                                android:layout_weight="1"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Send · Full · K : 20"
-                                    android:gravity="right"
-                                    android:fontFamily="@font/sofia_pro_light_az"
-                                    android:textSize="16dp"
-                                    android:textColor="#ffffff"/>
-
-                                <FrameLayout
-                                    android:visibility="visible"
-                                    android:layout_marginTop="10dp"
-                                    android:layout_width="100dp"
-                                    android:layout_height="35dp"
-                                    android:layout_gravity="right"
-                                    android:animateLayoutChanges="true">
-
-                                    <ImageView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:background="@drawable/ic_toggle_active"
-                                        android:layout_gravity="left|center_vertical"/>
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="Accept"
-                                        android:paddingLeft="10dp"
-                                        android:paddingRight="10dp"
-                                        android:textColor="@color/white"
-                                        android:fontFamily="@font/sofia_pro_regular_az"
-                                        android:textSize="16dp"
-                                        android:textStyle="bold"
-                                        android:layout_gravity="center"/>
-                                </FrameLayout>
-
-                            </LinearLayout>
-                        </LinearLayout>
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_gravity="center_vertical"
-                            android:background="#707070"/>
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:orientation="vertical">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
-                            android:orientation="horizontal">
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_weight="1"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                                <LinearLayout
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="horizontal">
-
-                                    <TextView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:text="OCT 25"
-                                        android:layout_gravity="center_vertical"
-                                        android:fontFamily="@font/sofia_pro_semi_bold_az"
-                                        android:textSize="20dp"
-                                        android:textStyle="bold"
-                                        android:letterSpacing="0.1"
-                                        android:textColor="#ff9500"/>
-
-                                    <TextView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:text=" · "
-                                        android:layout_gravity="center_vertical"
-                                        android:fontFamily="@font/sofia_pro_semi_bold_az"
-                                        android:textSize="20dp"
-                                        android:textStyle="bold"
-                                        android:letterSpacing="0.1"
-                                        android:textColor="#ffffff"/>
-
-                                    <TextView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:text="Note"
-                                        android:layout_gravity="center_vertical"
-                                        android:fontFamily="@font/sofia_pro_semi_bold_az"
-                                        android:textSize="20dp"
-                                        android:textStyle="bold"
-                                        android:letterSpacing="0.1"
-                                        android:textColor="#ffffff"/>
-                                </LinearLayout>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Inaruwa bata saman liyaunae"
-                                    android:layout_gravity="center_vertical"
-                                    android:fontFamily="@font/sofia_pro_regular_az"
-                                    android:textSize="16dp"
-                                    android:letterSpacing="0.1"
-                                    android:textColor="#CCFFFFFF"/>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Chamal, maida, refine"
-                                    android:layout_gravity="center_vertical"
-                                    android:fontFamily="@font/sofia_pro_regular_az"
-                                    android:textSize="14dp"
-                                    android:letterSpacing="0.1"
-                                    android:textColor="#ccffffff"/>
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="180dp"
-                                android:layout_weight="1"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="jai santoshi hardware"
-                                    android:gravity="right"
-                                    android:fontFamily="@font/sofia_pro_light_az"
-                                    android:textSize="16dp"
-                                    android:textColor="#ffffff"/>
-
-                                <FrameLayout
-                                    android:visibility="visible"
-                                    android:layout_marginTop="10dp"
-                                    android:layout_width="100dp"
-                                    android:layout_height="35dp"
-                                    android:layout_gravity="right"
-                                    android:animateLayoutChanges="true">
-
-                                    <ImageView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:background="@drawable/ic_toggle_active"
-                                        android:layout_gravity="left|center_vertical"/>
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="Accept"
-                                        android:paddingLeft="10dp"
-                                        android:paddingRight="10dp"
-                                        android:textColor="@color/white"
-                                        android:fontFamily="@font/sofia_pro_regular_az"
-                                        android:textSize="16dp"
-                                        android:textStyle="bold"
-                                        android:layout_gravity="center"/>
-                                </FrameLayout>
-
-                            </LinearLayout>
-                        </LinearLayout>
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_gravity="center_vertical"
-                            android:background="#707070"/>
-
-                    </LinearLayout>
-
-                </LinearLayout>
+                    android:layout_height="wrap_content"/>
 
             </LinearLayout>
 
