--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -263,6 +263,7 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/Extrarecyclerview"
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
