--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -61,6 +61,7 @@
                     android:textColor="@color/white"/>
 
                 <TextView
+                    android:id="@+id/txtTotalresellerdashboard"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sofia_pro_black_az"
@@ -81,6 +82,7 @@
                     android:textColor="#CCFFFFFF"/>
 
                 <TextView
+                    android:id="@+id/txtLatestReseller"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sofia_pro_light_az"
@@ -152,6 +154,7 @@
                         android:textColor="@color/white"/>
 
                     <TextView
+                        android:id="@+id/txtProfit"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/sofia_pro_black_az"
@@ -188,6 +191,7 @@
                         android:textColor="#CCFFFFFF"/>
 
                     <TextView
+                        android:id="@+id/txtInvestment"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/sofia_pro_light_az"
@@ -251,6 +255,7 @@
                     android:textColor="@color/white"/>
 
                 <TextView
+                    android:id="@+id/txtGassold"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sofia_pro_black_az"
@@ -276,6 +281,7 @@
                         android:textColor="#CCFFFFFF"/>
 
                     <TextView
+                        android:id="@+id/txtGassoldAmount"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/sofia_pro_light_az"
@@ -330,6 +336,7 @@
                     android:textColor="@color/white"/>
 
                     <TextView
+                        android:id="@+id/txtCylinderSold"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/sofia_pro_black_az"
@@ -356,6 +363,7 @@
                         android:textColor="#CCFFFFFF"/>
 
                     <TextView
+                        android:id="@+id/txtCylinderSoldAmount"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/sofia_pro_light_az"
@@ -428,6 +436,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/txtCompanyname"
                         android:layout_weight="1"
                         android:textAlignment="textStart"
                         android:layout_width="match_parent"
@@ -439,6 +448,7 @@
                         android:textColor="@color/white"/>
 
                     <TextView
+                        android:id="@+id/txtNoofCylinder"
                         android:textAlignment="textEnd"
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
@@ -550,6 +560,7 @@
                         android:orientation="horizontal" />
                 </LinearLayout>
                 <TextView
+                    android:id="@+id/txtBestSellingPrima"
                     android:layout_width="60dp"
                     android:layout_height="wrap_content"
                     android:text="3544"
@@ -590,6 +601,7 @@
                 </LinearLayout>
 
                 <TextView
+                    android:id="@+id/txtBestSellingKamakhya"
                     android:layout_width="60dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -629,6 +641,7 @@
                         android:layout_height="1dp"/>
                 </LinearLayout>
                 <TextView
+                    android:id="@+id/txtBestSellingSuvidha"
                     android:layout_width="60dp"
                     android:layout_height="wrap_content"
                     android:text="2000"
