--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -441,16 +441,16 @@
                         android:textAlignment="textStart"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="PRIMA"
+                        android:text="KAMAKHYA"
                         android:fontFamily="@font/sofia_pro_black_az"
-                        android:textSize="26dp"
+                        android:textSize="24dp"
                         android:textStyle="bold"
                         android:textColor="@color/white"/>
 
                     <TextView
                         android:id="@+id/txtNoofCylinder"
                         android:textAlignment="textEnd"
-                        android:layout_width="50dp"
+                        android:layout_width="40dp"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/sofia_pro_light_az"
                         android:text="15"
