--- a/app/src/main/res/layout/viewcompany.xml
+++ b/app/src/main/res/layout/viewcompany.xml
@@ -27,9 +27,14 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_weight="1">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
                     <TextView
                         android:id="@+id/txtCylindername"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Prima"
                         android:contentDescription="Name"
@@ -38,6 +43,17 @@
                         android:textFontWeight="900"
                         android:fontFamily="@font/sofia_pro_bold_az"
                         android:textSize="22sp"/>
+
+                        <ImageView
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
+                            android:layout_marginLeft="200dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@drawable/circle_button" />
+
+
+                    </LinearLayout>
+
                     <TextView
                         android:id="@+id/txtFcname"
                         android:layout_width="match_parent"
@@ -71,6 +87,7 @@
                     android:orientation="vertical"
                     android:contentDescription="9801149729"
                     android:layout_weight="1">
+
 
                     <ImageView
                         android:layout_width="35dp"
