--- a/app/src/main/res/layout/viewmember.xml
+++ b/app/src/main/res/layout/viewmember.xml
@@ -28,9 +28,14 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_weight="1">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
                 <TextView
                     android:id="@+id/tv_Fullname"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Manoj Sah"
                     android:contentDescription="Name"
@@ -39,6 +44,16 @@
                     android:textFontWeight="900"
                     android:fontFamily="@font/sofia_pro_bold_az"
                     android:textSize="22sp"/>
+
+                    <ImageView
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_marginLeft="150dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/circle_button" />
+
+
+                </LinearLayout>
 
                 <TextView
                     android:layout_width="match_parent"
