--- a/app/src/main/res/layout/viewresellerprofile.xml
+++ b/app/src/main/res/layout/viewresellerprofile.xml
@@ -34,7 +34,7 @@
                     android:orientation="horizontal">
                 <TextView
                     android:id="@+id/tv_Fullname"
-                    android:layout_width="wrap_content"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:text="Manoj Sah"
                     android:contentDescription="Name"
@@ -48,7 +48,7 @@
                     <ImageView
                         android:layout_width="15dp"
                         android:layout_height="15dp"
-                        android:layout_marginLeft="150dp"
+                        android:layout_marginLeft="40dp"
                         android:layout_marginTop="10dp"
                         android:background="@drawable/circle_button" />
 
