--- a/app/src/main/res/layout/viewcompany.xml
+++ b/app/src/main/res/layout/viewcompany.xml
@@ -34,7 +34,7 @@
                         android:orientation="horizontal">
                     <TextView
                         android:id="@+id/txtCylindername"
-                        android:layout_width="wrap_content"
+                        android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:text="Prima"
                         android:contentDescription="Name"
@@ -47,7 +47,7 @@
                         <ImageView
                             android:layout_width="15dp"
                             android:layout_height="15dp"
-                            android:layout_marginLeft="200dp"
+                            android:layout_marginLeft="40dp"
                             android:layout_marginTop="10dp"
                             android:background="@drawable/circle_button" />
 
