--- a/cylinderwearos/src/main/res/layout/activity_cylinder_wear_os.xml
+++ b/cylinderwearos/src/main/res/layout/activity_cylinder_wear_os.xml
@@ -14,15 +14,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:padding="15dp"
         android:backgroundTint="#2540F0"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="15dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_marginHorizontal="10dp"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <TextView
@@ -47,34 +47,37 @@
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
+
             <ImageView
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:src="@drawable/ic_prima"/>
+                android:src="@drawable/ic_prima" />
+
             <TextView
                 android:id="@+id/txtBestSellingPrima"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:text="3544"
+                android:layout_gravity="center_vertical"
                 android:fontFamily="@font/sofia_pro_light_az"
-                android:textStyle="normal"
+                android:gravity="right"
+                android:text="3544"
+                android:textColor="@color/white"
                 android:textFontWeight="100"
                 android:textSize="12dp"
-                android:gravity="right"
-                android:layout_gravity="center_vertical"
-                android:textColor="@color/white"/>
+                android:textStyle="normal" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
+
             <ImageView
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:src="@drawable/ic_kamakhya"/>
+                android:src="@drawable/ic_kamakhya" />
 
             <TextView
                 android:id="@+id/txtBestSellingKamakhya"
@@ -93,25 +96,27 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
+
             <ImageView
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:src="@drawable/ic_suvidha"/>
+                android:src="@drawable/ic_suvidha" />
+
             <TextView
                 android:id="@+id/txtBestSellingSuvidha"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:text="2000"
+                android:layout_gravity="center_vertical"
                 android:fontFamily="@font/sofia_pro_light_az"
-                android:textStyle="normal"
+                android:gravity="right"
+                android:text="2000"
+                android:textColor="@color/white"
                 android:textFontWeight="100"
                 android:textSize="12dp"
-                android:gravity="right"
-                android:layout_gravity="center_vertical"
-                android:textColor="@color/white"/>
+                android:textStyle="normal" />
         </LinearLayout>
 
     </LinearLayout>
