Receipt Toggle Completed

--- a/app/src/main/res/layout/activity_receipt.xml
+++ b/app/src/main/res/layout/activity_receipt.xml
@@ -484,6 +484,7 @@
 
                 <Button
                     android:id="@+id/btnDownload"
+                    android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_marginRight="20dp"
@@ -494,6 +495,7 @@
 
                 <Button
                     android:id="@+id/btnSendmessage"
+                    android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:backgroundTint="#2190EB"
