--- a/app/src/main/res/layout/allnotification.xml
+++ b/app/src/main/res/layout/allnotification.xml
@@ -9,7 +9,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="25dp"
-    android:layout_marginLeft="10dp"
     android:orientation="horizontal">
 
 
@@ -133,6 +132,7 @@
                     android:textColor="#ffffff"/>
 
                 <FrameLayout
+                    android:id="@+id/btnAccept"
                     android:visibility="visible"
                     android:layout_marginTop="10dp"
                     android:layout_width="100dp"
@@ -141,12 +141,14 @@
                     android:animateLayoutChanges="true">
 
                     <ImageView
+                        android:id="@+id/ImageAccept"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/ic_toggle_active"
                         android:layout_gravity="left|center_vertical"/>
 
                     <TextView
+                        android:id="@+id/textAccept"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Accept"
