--- a/app/src/main/res/layout/view_schedule.xml
+++ b/app/src/main/res/layout/view_schedule.xml
@@ -82,9 +82,10 @@
                         android:textSize="16dp" />
 
                     <FrameLayout
-                        android:visibility="visible"
+                        android:id="@+id/ScheduleAccepted"
+                        android:visibility="invisible"
                         android:layout_marginTop="10dp"
-                        android:layout_width="100dp"
+                        android:layout_width="110dp"
                         android:layout_height="35dp"
                         android:layout_gravity="right"
                         android:animateLayoutChanges="true">
@@ -106,7 +107,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Kancha"
+                            android:text="Accepted"
                             android:paddingRight="10dp"
                             android:textColor="@color/white"
                             android:fontFamily="@font/sofia_pro_regular_az"
@@ -116,9 +117,10 @@
                     </FrameLayout>
 
                     <FrameLayout
+                        android:id="@+id/ScheduleAccept"
                         android:visibility="visible"
                         android:layout_marginTop="10dp"
-                        android:layout_width="100dp"
+                        android:layout_width="110dp"
                         android:layout_height="35dp"
                         android:layout_gravity="right"
                         android:animateLayoutChanges="true">
