--- a/app/src/main/res/layout/viewcompany.xml
+++ b/app/src/main/res/layout/viewcompany.xml
@@ -315,6 +315,7 @@
                             android:layout_height="35dp"/>
 
                         <TextView
+                            android:id="@+id/tv_Tag"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
