Some Minor Changes

--- a/app/src/main/res/layout/activity_extra_work_acitivity.xml
+++ b/app/src/main/res/layout/activity_extra_work_acitivity.xml
@@ -162,7 +162,7 @@
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/title_Comments"
+                android:hint="Write down the subject.."
                 android:textColor="@color/white"
                 android:fontFamily="@font/sofia_pro_regular_az"
                 android:textSize="16dp"
@@ -197,7 +197,7 @@
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/title_Comments"
+                android:hint="Write down the message.."
                 android:textColor="@color/white"
                 android:fontFamily="@font/sofia_pro_regular_az"
                 android:textSize="16dp"
