--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1543,7 +1543,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/title_Ratenoofcylinder"
-                android:text="12334"
                 android:inputType="number"
                 android:textColor="@color/white"
                 android:fontFamily="@font/sofia_pro_regular_az"
@@ -1579,7 +1578,7 @@
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/title_Comments"
+                android:hint="Write Something Here.."
                 android:textColor="@color/white"
                 android:fontFamily="@font/sofia_pro_regular_az"
                 android:textSize="16dp"
