--- a/app/src/main/res/layout/activity_add_schedule.xml
+++ b/app/src/main/res/layout/activity_add_schedule.xml
@@ -1693,7 +1693,7 @@
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/title_Comments"
+                android:hint="Remarks Here.."
                 android:textColor="@color/white"
                 android:fontFamily="@font/sofia_pro_regular_az"
                 android:textSize="16dp"
